working prototype of agent + container deployment. Reclaim memory format is wrong in this commit, before merging

--- a/Agent/CMakeLists.txt
+++ b/Agent/CMakeLists.txt
@@ -4,4 +4,4 @@ project(Agent)
 set(CMAKE_CXX_STANDARD 14)
 SET(CMAKE_CXX_FLAGS -pthread)
 
-add_executable(Agent Handler.cpp Handler.h Server.cpp Server.h main.cpp)
+add_executable(Agent Handler.cpp Handler.h Server.cpp Server.h om.h main.cpp)
