--- a/Agent/Makefile
+++ b/Agent/Makefile
@@ -48,10 +48,10 @@ RM = /usr/local/bin/cmake -E remove -f
 EQUALS = =
 
 # The top-level source directory on which CMake was run.
-CMAKE_SOURCE_DIR = /mnt/ECKernel/EC-Agent/Agent
+CMAKE_SOURCE_DIR = /mnt/ECKernel/EC-4.20.16/EC-Agent/Agent
 
 # The top-level build directory on which CMake was run.
-CMAKE_BINARY_DIR = /mnt/ECKernel/EC-Agent/Agent
+CMAKE_BINARY_DIR = /mnt/ECKernel/EC-4.20.16/EC-Agent/Agent
 
 #=============================================================================
 # Targets provided globally by CMake.
@@ -80,9 +80,9 @@ edit_cache/fast: edit_cache
 
 # The main all target
 all: cmake_check_build_system
-	$(CMAKE_COMMAND) -E cmake_progress_start /mnt/ECKernel/EC-Agent/Agent/CMakeFiles /mnt/ECKernel/EC-Agent/Agent/CMakeFiles/progress.marks
+	$(CMAKE_COMMAND) -E cmake_progress_start /mnt/ECKernel/EC-4.20.16/EC-Agent/Agent/CMakeFiles /mnt/ECKernel/EC-4.20.16/EC-Agent/Agent/CMakeFiles/progress.marks
 	$(MAKE) -f CMakeFiles/Makefile2 all
-	$(CMAKE_COMMAND) -E cmake_progress_start /mnt/ECKernel/EC-Agent/Agent/CMakeFiles 0
+	$(CMAKE_COMMAND) -E cmake_progress_start /mnt/ECKernel/EC-4.20.16/EC-Agent/Agent/CMakeFiles 0
 .PHONY : all
 
 # The main clean target
