--- a/Agent/CMakeLists.txt
+++ b/Agent/CMakeLists.txt
@@ -1,7 +1,17 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.15)
 project(Agent)
 
-set(CMAKE_CXX_STANDARD 14)
-SET(CMAKE_CXX_FLAGS -pthread)
+set(CMAKE_CXX_STANDARD 17)
+set(PTHREAD_LIB pthread)
 
-add_executable(Agent Handler.cpp Handler.h Server.cpp Server.h main.cpp)
+include_directories(.)
+
+add_executable(Agent
+        CMakeLists.txt
+        Handler.cpp
+        Handler.h
+        main.cpp
+        Server.cpp
+        Server.h)
+
+target_link_libraries(Agent PRIVATE ${PTHREAD_LIB})
